// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExtensionView /> when a panel type renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionView
    deleteViewHandler={[Function]}
    extension={
        Object {
            "authorName": "test",
            "channelId": "channelId",
            "description": "description",
            "iconUrl": "icon_url",
            "id": "id",
            "name": "name",
            "requestIdentity": false,
            "sku": "sku",
            "state": "state",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "version",
            "views": Object {},
            "whitelistedConfigUrls": "foo",
            "whitelistedPanelUrls": "bar",
          }
    }
    id="0"
    linked={false}
    mode="viewer"
    role="Broadcaster"
    type="panel"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="view__header"
>
          <div
                    className="view__descriptor"
          >
                    Broadcaster
          </div>
          <div
                    className="view__descriptor"
          />
</div>,
        <div
          className="view"
          style={
                    Object {
                              "height": undefined,
                              "width": "320px",
                            }
          }
>
          <ExtensionFrame
                    extension={
                              Object {
                                        "authorName": "test",
                                        "channelId": "channelId",
                                        "description": "description",
                                        "iconUrl": "icon_url",
                                        "id": "id",
                                        "name": "name",
                                        "requestIdentity": false,
                                        "sku": "sku",
                                        "state": "state",
                                        "summary": "summary",
                                        "token": "token",
                                        "vendorCode": "vendorCode",
                                        "version": "version",
                                        "views": Object {},
                                        "whitelistedConfigUrls": "foo",
                                        "whitelistedPanelUrls": "bar",
                                      }
                    }
                    iframeClassName="rig-frame frameid-0"
                    mode="viewer"
                    type="panel"
          />
</div>,
      ],
      "className": "view__wrapper",
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <div
              className="view__descriptor"
>
              Broadcaster
</div>,
            <div
              className="view__descriptor"
/>,
          ],
          "className": "view__header",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Broadcaster",
              "className": "view__descriptor",
            },
            "ref": null,
            "rendered": "Broadcaster",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": null,
              "className": "view__descriptor",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ExtensionFrame
            extension={
                        Object {
                                    "authorName": "test",
                                    "channelId": "channelId",
                                    "description": "description",
                                    "iconUrl": "icon_url",
                                    "id": "id",
                                    "name": "name",
                                    "requestIdentity": false,
                                    "sku": "sku",
                                    "state": "state",
                                    "summary": "summary",
                                    "token": "token",
                                    "vendorCode": "vendorCode",
                                    "version": "version",
                                    "views": Object {},
                                    "whitelistedConfigUrls": "foo",
                                    "whitelistedPanelUrls": "bar",
                                  }
            }
            iframeClassName="rig-frame frameid-0"
            mode="viewer"
            type="panel"
/>,
          "className": "view",
          "style": Object {
            "height": undefined,
            "width": "320px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "extension": Object {
              "authorName": "test",
              "channelId": "channelId",
              "description": "description",
              "iconUrl": "icon_url",
              "id": "id",
              "name": "name",
              "requestIdentity": false,
              "sku": "sku",
              "state": "state",
              "summary": "summary",
              "token": "token",
              "vendorCode": "vendorCode",
              "version": "version",
              "views": Object {},
              "whitelistedConfigUrls": "foo",
              "whitelistedPanelUrls": "bar",
            },
            "iframeClassName": "rig-frame frameid-0",
            "mode": "viewer",
            "type": "panel",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="view__header"
>
            <div
                        className="view__descriptor"
            >
                        Broadcaster
            </div>
            <div
                        className="view__descriptor"
            />
</div>,
          <div
            className="view"
            style={
                        Object {
                                    "height": undefined,
                                    "width": "320px",
                                  }
            }
>
            <ExtensionFrame
                        extension={
                                    Object {
                                                "authorName": "test",
                                                "channelId": "channelId",
                                                "description": "description",
                                                "iconUrl": "icon_url",
                                                "id": "id",
                                                "name": "name",
                                                "requestIdentity": false,
                                                "sku": "sku",
                                                "state": "state",
                                                "summary": "summary",
                                                "token": "token",
                                                "vendorCode": "vendorCode",
                                                "version": "version",
                                                "views": Object {},
                                                "whitelistedConfigUrls": "foo",
                                                "whitelistedPanelUrls": "bar",
                                              }
                        }
                        iframeClassName="rig-frame frameid-0"
                        mode="viewer"
                        type="panel"
            />
</div>,
        ],
        "className": "view__wrapper",
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              <div
                className="view__descriptor"
>
                Broadcaster
</div>,
              <div
                className="view__descriptor"
/>,
            ],
            "className": "view__header",
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Broadcaster",
                "className": "view__descriptor",
              },
              "ref": null,
              "rendered": "Broadcaster",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": null,
                "className": "view__descriptor",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ExtensionFrame
              extension={
                            Object {
                                          "authorName": "test",
                                          "channelId": "channelId",
                                          "description": "description",
                                          "iconUrl": "icon_url",
                                          "id": "id",
                                          "name": "name",
                                          "requestIdentity": false,
                                          "sku": "sku",
                                          "state": "state",
                                          "summary": "summary",
                                          "token": "token",
                                          "vendorCode": "vendorCode",
                                          "version": "version",
                                          "views": Object {},
                                          "whitelistedConfigUrls": "foo",
                                          "whitelistedPanelUrls": "bar",
                                        }
              }
              iframeClassName="rig-frame frameid-0"
              mode="viewer"
              type="panel"
/>,
            "className": "view",
            "style": Object {
              "height": undefined,
              "width": "320px",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "extension": Object {
                "authorName": "test",
                "channelId": "channelId",
                "description": "description",
                "iconUrl": "icon_url",
                "id": "id",
                "name": "name",
                "requestIdentity": false,
                "sku": "sku",
                "state": "state",
                "summary": "summary",
                "token": "token",
                "vendorCode": "vendorCode",
                "version": "version",
                "views": Object {},
                "whitelistedConfigUrls": "foo",
                "whitelistedPanelUrls": "bar",
              },
              "iframeClassName": "rig-frame frameid-0",
              "mode": "viewer",
              "type": "panel",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ExtensionView /> when a panel type renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExtensionView
    deleteViewHandler={[Function]}
    extension={
        Object {
            "authorName": "test",
            "channelId": "channelId",
            "description": "description",
            "iconUrl": "icon_url",
            "id": "id",
            "name": "name",
            "requestIdentity": false,
            "sku": "sku",
            "state": "state",
            "summary": "summary",
            "token": "token",
            "vendorCode": "vendorCode",
            "version": "version",
            "views": Object {},
            "whitelistedConfigUrls": "foo",
            "whitelistedPanelUrls": "bar",
          }
    }
    id="0"
    linked={false}
    mode="viewer"
    overlaySize={
        Object {
            "height": "1px",
            "width": "1px",
          }
    }
    role="Broadcaster"
    type="video_overlay"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="view__header"
>
          <div
                    className="view__descriptor"
          >
                    Broadcaster
          </div>
          <div
                    className="view__descriptor"
          />
</div>,
        <div
          className="view"
          style={
                    Object {
                              "height": "1px",
                              "width": "1px",
                            }
          }
>
          <ExtensionFrame
                    extension={
                              Object {
                                        "authorName": "test",
                                        "channelId": "channelId",
                                        "description": "description",
                                        "iconUrl": "icon_url",
                                        "id": "id",
                                        "name": "name",
                                        "requestIdentity": false,
                                        "sku": "sku",
                                        "state": "state",
                                        "summary": "summary",
                                        "token": "token",
                                        "vendorCode": "vendorCode",
                                        "version": "version",
                                        "views": Object {},
                                        "whitelistedConfigUrls": "foo",
                                        "whitelistedPanelUrls": "bar",
                                      }
                    }
                    iframeClassName="rig-frame frameid-0"
                    mode="viewer"
                    type="video_overlay"
          />
</div>,
      ],
      "className": "view__wrapper",
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <div
              className="view__descriptor"
>
              Broadcaster
</div>,
            <div
              className="view__descriptor"
/>,
          ],
          "className": "view__header",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Broadcaster",
              "className": "view__descriptor",
            },
            "ref": null,
            "rendered": "Broadcaster",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": null,
              "className": "view__descriptor",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ExtensionFrame
            extension={
                        Object {
                                    "authorName": "test",
                                    "channelId": "channelId",
                                    "description": "description",
                                    "iconUrl": "icon_url",
                                    "id": "id",
                                    "name": "name",
                                    "requestIdentity": false,
                                    "sku": "sku",
                                    "state": "state",
                                    "summary": "summary",
                                    "token": "token",
                                    "vendorCode": "vendorCode",
                                    "version": "version",
                                    "views": Object {},
                                    "whitelistedConfigUrls": "foo",
                                    "whitelistedPanelUrls": "bar",
                                  }
            }
            iframeClassName="rig-frame frameid-0"
            mode="viewer"
            type="video_overlay"
/>,
          "className": "view",
          "style": Object {
            "height": "1px",
            "width": "1px",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "extension": Object {
              "authorName": "test",
              "channelId": "channelId",
              "description": "description",
              "iconUrl": "icon_url",
              "id": "id",
              "name": "name",
              "requestIdentity": false,
              "sku": "sku",
              "state": "state",
              "summary": "summary",
              "token": "token",
              "vendorCode": "vendorCode",
              "version": "version",
              "views": Object {},
              "whitelistedConfigUrls": "foo",
              "whitelistedPanelUrls": "bar",
            },
            "iframeClassName": "rig-frame frameid-0",
            "mode": "viewer",
            "type": "video_overlay",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="view__header"
>
            <div
                        className="view__descriptor"
            >
                        Broadcaster
            </div>
            <div
                        className="view__descriptor"
            />
</div>,
          <div
            className="view"
            style={
                        Object {
                                    "height": "1px",
                                    "width": "1px",
                                  }
            }
>
            <ExtensionFrame
                        extension={
                                    Object {
                                                "authorName": "test",
                                                "channelId": "channelId",
                                                "description": "description",
                                                "iconUrl": "icon_url",
                                                "id": "id",
                                                "name": "name",
                                                "requestIdentity": false,
                                                "sku": "sku",
                                                "state": "state",
                                                "summary": "summary",
                                                "token": "token",
                                                "vendorCode": "vendorCode",
                                                "version": "version",
                                                "views": Object {},
                                                "whitelistedConfigUrls": "foo",
                                                "whitelistedPanelUrls": "bar",
                                              }
                        }
                        iframeClassName="rig-frame frameid-0"
                        mode="viewer"
                        type="video_overlay"
            />
</div>,
        ],
        "className": "view__wrapper",
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              <div
                className="view__descriptor"
>
                Broadcaster
</div>,
              <div
                className="view__descriptor"
/>,
            ],
            "className": "view__header",
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Broadcaster",
                "className": "view__descriptor",
              },
              "ref": null,
              "rendered": "Broadcaster",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": null,
                "className": "view__descriptor",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ExtensionFrame
              extension={
                            Object {
                                          "authorName": "test",
                                          "channelId": "channelId",
                                          "description": "description",
                                          "iconUrl": "icon_url",
                                          "id": "id",
                                          "name": "name",
                                          "requestIdentity": false,
                                          "sku": "sku",
                                          "state": "state",
                                          "summary": "summary",
                                          "token": "token",
                                          "vendorCode": "vendorCode",
                                          "version": "version",
                                          "views": Object {},
                                          "whitelistedConfigUrls": "foo",
                                          "whitelistedPanelUrls": "bar",
                                        }
              }
              iframeClassName="rig-frame frameid-0"
              mode="viewer"
              type="video_overlay"
/>,
            "className": "view",
            "style": Object {
              "height": "1px",
              "width": "1px",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "extension": Object {
                "authorName": "test",
                "channelId": "channelId",
                "description": "description",
                "iconUrl": "icon_url",
                "id": "id",
                "name": "name",
                "requestIdentity": false,
                "sku": "sku",
                "state": "state",
                "summary": "summary",
                "token": "token",
                "vendorCode": "vendorCode",
                "version": "version",
                "views": Object {},
                "whitelistedConfigUrls": "foo",
                "whitelistedPanelUrls": "bar",
              },
              "iframeClassName": "rig-frame frameid-0",
              "mode": "viewer",
              "type": "video_overlay",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
